--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "reactnchat",
-    "slug": "reactnchat",
+    "name": "Prison_management_system",
+    "slug": "Prison_management_system",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
