--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.7",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "expo": "~42.0.1",
@@ -21,7 +22,8 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
