--- a/Prison_AdminManage_System/package.json
+++ b/Prison_AdminManage_System/package.json
@@ -11,9 +11,11 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-time-picker": "^4.5.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
