--- a/Prison_man_system/package.json
+++ b/Prison_man_system/package.json
@@ -8,22 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "formik": "^2.2.9",
+    "moment": "^2.29.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
-    "react-native-reanimated": "~2.2.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
