--- a/Prison_AdminManage_System/package.json
+++ b/Prison_AdminManage_System/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-time-picker": "^4.5.0",
