--- a/Client_side/package.json
+++ b/Client_side/package.json
@@ -19,11 +19,11 @@
     "expo": "~45.0.0",
     "expo-dev-client": "^1.0.1",
     "expo-status-bar": "~1.3.0",
-    "firebase": "8.2.3",
+    "firebase": "^8.2.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "^0.68.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.2.1",
