--- a/Client_side/package.json
+++ b/Client_side/package.json
@@ -19,6 +19,7 @@
     "expo": "~45.0.0",
     "expo-dev-client": "^1.0.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "firebase": "^8.2.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
@@ -32,7 +33,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "^3.11.1",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
   },
